--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 
-    <title>Ashish Ghorpade</title>
+    <title>Dhamodaran V</title>
 </head>
 
 <body>
